[package]
name = "qbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
structopt = { version = "0.3", default-features = false }
anyhow = "1"
tokio = {version="1", features =["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
